--- a/src/Lykke.Service.BittrexAdapter.Services/Lykke.Service.BittrexAdapter.Services.csproj
+++ b/src/Lykke.Service.BittrexAdapter.Services/Lykke.Service.BittrexAdapter.Services.csproj
@@ -6,7 +6,8 @@
     <Version>1.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Lykke.Common" Version="7.0.1" />
+    <PackageReference Include="Lykke.Common.ExchangeAdapter.Server" Version="4.0.2" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lykke.Service.BittrexAdapter.Core\Lykke.Service.BittrexAdapter.Core.csproj" />
