--- a/src/Lykke.Service.BittrexAdapter/Lykke.Service.BittrexAdapter.csproj
+++ b/src/Lykke.Service.BittrexAdapter/Lykke.Service.BittrexAdapter.csproj
@@ -22,9 +22,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Lykke.Sdk" Version="4.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
+    <PackageReference Include="Lykke.Common.ExchangeAdapter.Server" Version="4.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lykke.Service.BittrexAdapter.AzureRepositories\Lykke.Service.BittrexAdapter.AzureRepositories.csproj" />
